Improve header link contrast (fix #1870)

--- a/static/css/restyle.less
+++ b/static/css/restyle.less
@@ -903,14 +903,12 @@ button.good {
     color: @link-on-color-bg;
   }
 
-  .version-number,
-  h4.author,
+  h4.author a,
   a.privacy-policy,
   #contribution.notice p a,
-  .category.more-info,
   .vital a,
   #reviews-link {
-    opacity: 0.4;
+    text-decoration: underline;
   }
 
   .version-number {
